# harness-dev-content

./: .gitignore  AGENTS.md  CLAUDE.md  README-zh.md  README.md  pyproject.toml
.claude/: CLAUDE.md  check-harness.py  package-task.py  router.py  status-board.py
.claude/agents/: IMPLEMENTER.md  REVIEWER.md
.claude/docs/: HARNESS-ARCHITECTURE.md
.claude/hooks/: content-validator.sh  detect-feedback-signal.py  mark-review-needed.sh  pre-commit-check.sh  test-steering-loop.sh
.claude/skills/_utils/: exit_check_base.py
.claude/skills/content/frontend-slides/: SKILL.md  exit-check.py
.claude/skills/content/script-writer/: SKILL.md  exit-check.py
.claude/skills/content/tts-engine/: exit-check.py
.claude/skills/content/video-compositor/: SKILL.md  exit-check.py
.claude/skills/content/visual-designer/: SKILL.md
.claude/skills/dev/bug-fixer/: SKILL.md  exit-check.py
.claude/skills/dev/design-brief-builder/: SKILL.md
.claude/skills/dev/design-maker/: exit-check.py
.claude/state/: L0-strategy.md  L2-content-spec.md  L2-spec.md  L5-content-validation.md  L5-validation.md  L6-distribution.md  task-history.yaml
docs/: OPTIMIZATION-ROADMAP.md  PM-GATE-DESIGN.md  PM-GATE-MILESTONES.md
reliable-dev-harness/: README.md
reliable-dev-harness/.claude/: CLAUDE.md  check-harness.py  router.py
reliable-dev-harness/.claude/docs/: HARNESS-ARCHITECTURE.md
tests/: __init__.py  mock_state.py  run_tests.py  test_code_review.py  test_content_strategy.py  test_product_spec_builder.py  test_release_builder.py  test_script_writer.py
(+26 files in other folders)
